feat(refactor): 删除不再使用的处理器和模型文件
